# ur_sim2real

./: .gitignore  CMakeLists.txt  README.md  controller_plugins.xml  package.xml
config/: ur_real_controllers.yaml  ur_sim_controllers.yaml
include/ur_sim2real/: io_mimic_controller.hpp  joint_mimic_controller.hpp
launch/: launch_ur_real.launch.py  launch_ur_sim.launch.py  ur_control.launch.py
script/: activate_mimic.bash  deactivate_mimic.bash  run_ursim.bash  run_ursim2.bash
src/: io_mimic_controller.cpp  io_mimic_node.cpp  io_test.cpp  joint_mimic_controller.cpp  joint_mimic_controller_parameters.yaml  sync_joint.cpp
