<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_sim2real</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="songjiexiao@zju.edu.cn">developer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rcutils</depend>
  <depend>pluginlib</depend>
  <depend>generate_parameter_library</depend>
  <depend>sensor_msgs</depend>
  <depend>realtime_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
